--- a/ContainerFile
+++ b/ContainerFile
@@ -4,6 +4,6 @@ WORKDIR /app
 
 COPY . .
 
-RUN pip install -r requirements.txt
+RUN pip install -r requirements.txt && pip install gunicorn
 
 CMD gunicorn -w 2 -b 0.0.0.0:5001 app:app
