--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
 blinker==1.7.0
+certifi==2024.2.2
+cffi==1.16.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.2
@@ -6,5 +10,10 @@ importlib_metadata==7.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+minio==7.2.5
+pycparser==2.21
+pycryptodome==3.20.0
+typing_extensions==4.10.0
+urllib3==2.2.1
 Werkzeug==3.0.1
 zipp==3.18.1
